--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,24 +2,27 @@ name: deploy
 
 on:
   push:
-    branches: [main]
+    branches: [master]
+
+concurrency: production_environment
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-            php-version: 8.1
-            tools: composer:v2
-            coverage: none
-      - name: Install Composer dependencies
-        run: composer update
+          php-version: "8.1"
+
+      - name: Install dependencies
+        run: composer install
+
       - name: Deploy
         uses: deployphp/action@v1
         with:
-          private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-          dep: deploy production -v
+          private-key: ${{ secrets.PRIVATE_KEY }}
+          dep: deploy
